--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orange Rabbit</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/icon.css">
 </head>
 
 <body>
-    
+    <header>
+        <div class="wrapper">
+           <div class="header-wrap">
+            <div class="logo">
+                <a href="#"><img src="img/logo.png" alt=""></a>
+                <a href="#">
+            <span class="logo-orange logo-text">orange 
+             </span>
+             <br>
+               <span class="logo-black logo-text">Rabbit</span>
+           </a>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#"><span class="icon-home-icon"></span><br>home</a></li>
+                    <li><a href="#"><span class="icon-about-icon"></span><br>about</a></li>
+                    <li><a href="#"><span class="icon-work-icon"></span><br>work</a></li>
+                    <li><a href="#"><span class="icon-blog-icon"></span><br>blog</a></li>
+                    <li><a href="#"><span class="icon-contact-icon"></span><br>contact</a></li>
+                </ul>
+            </nav>
+            </div>
+        </div>
+    </header>
+<div class="slider">
+ <div class="wrapper">
+  <h1><span class="h1-orange">do you like rabbits? </span><br>
+  <span class="h1-dark">do you like oranges?</span></h1>
+  </div>
+</div>
+
+
+
+
 </body>
+
 </html>
