--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <header>
         <div class="wrapper">
             <div class="header-wrap">
-                <div class="logo">
-                    <a href="#"><img src="img/logo.png" alt=""></a>
-                    <a href="#">
+                <a href="#" class="logo">
+                    <div class="logo-item"><img src="img/logo.png" alt=""></div>
+                    <div class="logo-item">
             <span class="logo-orange logo-text">orange 
              </span>
              <br>
                <span class="logo-black logo-text">Rabbit</span>
-           </a>
-                </div>
+           </div>
+                </a>
                 <nav class="navigation">
                     <ul>
                         <li><a href="#"><span class="icon-home-icon"></span><br>home</a></li>
