--- a/index.html
+++ b/index.html
@@ -98,16 +98,17 @@
                <h2>Send us a message...</h2>
                 <form action="mail" class="contact-form">
                     <div class="form-item">
-                        <label for="name" class="label-options"><span class="form-item-text">Name:</span></label>
-                        <div class="form-input"><input type="text" class="input-options"></div>
+                        <label for="name" class="label-options" ><span class="form-item-text">Name:</span></label>
+                        <div class="form-input"><input type="text" id="name" class="input-options"></div>
                     </div>
                     <div class="form-item">
-                        <label for="email" class="label-options"><span class="form-item-text">Email:</span></label>
-                        <div class="form-input"><input type="text" class="input-options"></div>
+                        <label for="email" class="label-options" ><span class="form-item-text">Email:</span></label>
+                        <div class="form-input"><input type="text"  id="email" class="input-options"></div>
                     </div>
                     <div class="form-item">
-                        <label for="Message" class="label-options"><span class="form-item-text">Message:</span></label>
-                        <div class="form-input"><textarea class="input-options" rows="3"></textarea>
+                        <label for="message" class="label-options" ><span class="form-item-text">Message:</span></label>
+                        <div class="form-input"><textarea class="input-options" rows="3" id="message" ></textarea>
+                    </div>
                     </div>
                    
                 </form>
