--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="wrapper">
             <div class="header-wrap">
                 <a href="#" class="logo">
-                    <div class="logo-item"><img src="img/logo.png" alt=""></div>
-                    <div class="logo-item">
+                    <span class="logo-item"><img src="img/logo.png" alt=""></span>
+                    <span class="logo-item">
             <span class="logo-orange logo-text">orange 
              </span>
              <br>
                <span class="logo-black logo-text">Rabbit</span>
-           </div>
+           </span>
                 </a>
                 <nav class="navigation">
                     <ul>
@@ -71,20 +71,20 @@
                 <div class="team-content">
                     <article class="team-item">
                         <h3>Hoof <span class="txt-orange"> - Lead Designer</span></h3>
-                        <div class="avatar horse">
-                        </div>
+                        <span class="avatar horse">
+                        </span>
                         <p>Hoof is our most talanted designer. However he`s not the talkative type and I would advise not getting on the wrong side of him.</p>
                     </article>
                     <article class="team-item">
                         <h3>Nibs <span class="txt-orange">  - CEO/Director</span></h3>
-                        <div class="avatar rabbit">
-                        </div>
+                        <span class="avatar rabbit">
+                        </span>
                         <p>Nibs is our go to woman. She’s the ceo/director of orange rabbit and runs fast when she has too.</p>
                     </article>
                     <article class="team-item">
                         <h3>Squawk <span class="txt-orange"> - Developer</span></h3>
-                        <div class="avatar emoo">
-                        </div>
+                        <span class="avatar emoo">
+                        </span>
                         <p>Squawk is no social bunny. But when it comes to programming he stands out from the crowd.</p>
                     </article>
                 </div>
