--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
                 <div class="team-content">
                     <article class="team-item">
                         <h3>Hoof <span class="txt-orange"> - Lead Designer</span></h3>
-                        <span class="avatar horse">
-                        </span>
+                        <div class="avatar horse">
+                        </div>
                         <p>Hoof is our most talanted designer. However he`s not the talkative type and I would advise not getting on the wrong side of him.</p>
                     </article>
                     <article class="team-item">
                         <h3>Nibs <span class="txt-orange">  - CEO/Director</span></h3>
-                        <span class="avatar rabbit">
-                        </span>
+                        <div class="avatar rabbit">
+                        </div>
                         <p>Nibs is our go to woman. She’s the ceo/director of orange rabbit and runs fast when she has too.</p>
                     </article>
                     <article class="team-item">
                         <h3>Squawk <span class="txt-orange"> - Developer</span></h3>
-                        <span class="avatar emoo">
-                        </span>
+                        <div class="avatar emoo">
+                        </div>
                         <p>Squawk is no social bunny. But when it comes to programming he stands out from the crowd.</p>
                     </article>
                 </div>
